manifests/03-apisix/ingressss-annotations-10000/1770-10.yaml
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01770-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01770-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01771-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01771-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01772-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01772-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01773-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01773-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01774-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01774-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01775-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01775-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01776-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01776-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01777-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01777-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01778-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01778-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 01779-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "01779-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
